@@ -90,9 +90,7 @@ public class ReassignmentHandler implements Handler {
                               if (excludedBroker.isEmpty())
                                 return CompletableFuture.completedFuture(Response.BAD_REQUEST);
                               var availableBrokers =
-                                  brokers.stream()
-                                      .filter(b -> b.id() != exclude)
-                                      .collect(Collectors.toList());
+                                  brokers.stream().filter(b -> b.id() != exclude).toList();
                               var partitions =
                                   excludedBroker.get().topicPartitions().stream()
                                       .filter(
@@ -113,7 +111,7 @@ public class ReassignmentHandler implements Handler {
                                                         .filter(
                                                             b -> b.topicPartitions().contains(tp))
                                                         .map(NodeInfo::id)
-                                                        .collect(Collectors.toList());
+                                                        .toList();
                                                 if (!ids.isEmpty()) return ids;
                                                 return List.of(
                                                     availableBrokers
@@ -131,7 +129,7 @@ public class ReassignmentHandler implements Handler {
             Stream.of(process2Folders, process2Nodes, processExclude)
                 .flatMap(Function.identity())
                 .map(CompletionStage::toCompletableFuture)
-                .collect(Collectors.toUnmodifiableList()))
+                .toList())
         .thenApply(
             rs -> {
               if (!rs.isEmpty() && rs.stream().allMatch(r -> r == Response.ACCEPT))
@@ -161,7 +159,7 @@ public class ReassignmentHandler implements Handler {
                           r ->
                               new AddingReplica(
                                   r, leaderSizes.getOrDefault(r.topicPartition(), 0L)))
-                      .collect(Collectors.toUnmodifiableList()));
+                      .toList());
             });
   }
 
