@@ -19,9 +19,9 @@ package org.astraea.app.web;
 import java.time.Duration;
 import java.util.Map;
 import java.util.NoSuchElementException;
+import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.CompletionException;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import org.astraea.common.Utils;
 import org.astraea.common.admin.Admin;
@@ -63,7 +63,7 @@ public class GroupHandlerTest {
                 GroupHandler.Groups.class, handler.get(Channel.EMPTY).toCompletableFuture().join());
         var group = response.groups.stream().filter(g -> g.groupId.equals(groupId)).findAny().get();
         Assertions.assertEquals(1, group.members.size());
-        group.members.forEach(m -> Assertions.assertNull(m.groupInstanceId));
+        group.members.forEach(m -> Assertions.assertEquals(Optional.empty(), m.groupInstanceId));
       }
     }
   }
@@ -236,8 +236,7 @@ public class GroupHandlerTest {
     try (var admin = Admin.of(SERVICE.bootstrapServers())) {
       var handler = new GroupHandler(admin);
 
-      var groupIds =
-          IntStream.range(0, 3).mapToObj(x -> Utils.randomString(10)).collect(Collectors.toList());
+      var groupIds = IntStream.range(0, 3).mapToObj(x -> Utils.randomString(10)).toList();
       groupIds.forEach(
           groupId -> {
             try (var consumer =
